Swithed from saving form data in CSV to Excel.

--- a/Website/survey/templates/survey.html
+++ b/Website/survey/templates/survey.html
@@ -32,7 +32,7 @@
         </label>
 
         <label id="dropdown-label" for="dropdown">How would you rate the clarity and organization of the project descriptions in my GitHub portfolio?
-            <select id="dropdown">
+            <select id="dropdown" name="dropdown">
               <option value="">Select one.</option>
               <option value="1">Poor</option>
               <option value="2">Below Average</option>
