Autofit Column Width in Spreadsheet

--- a/Website/survey/templates/survey.html
+++ b/Website/survey/templates/survey.html
@@ -101,7 +101,7 @@
           </fieldset>
 
         <label for="textbox">In your opinion, what specific improvements or additions could enhance the overall quality and effectiveness of my GitHub portfolio? Please share any suggestions or insights you may have.
-          <textarea id="textbox" name="textbox"></textarea>
+          <textarea id="textbox" name="textbox" maxlength="500"></textarea>
         </label>
 
         <input id="submit" type="submit" value="Submit" />
