Change Capitalization of Data Entries

--- a/Website/survey/templates/survey.html
+++ b/Website/survey/templates/survey.html
@@ -45,58 +45,58 @@
           <fieldset>
             <legend>Which language do you believe I demonstrate the strongest proficiency in within my GitHub projects?</legend>
             <label for="javascript">JavaScript
-              <input id="javascript" type="radio" name="strongest-lang" value="javascript" checked/>
+              <input id="javascript" type="radio" name="strongest-lang" value="Javascript" checked/>
             </label>
   
             <label for="python">Python
-              <input id="python" type="radio" name="strongest-lang" value="python"/>
+              <input id="python" type="radio" name="strongest-lang" value="Python"/>
             </label>
   
             <label for="java">Java
-              <input id="java" type="radio" name="strongest-lang" value="java"/>
+              <input id="java" type="radio" name="strongest-lang" value="Java"/>
             </label>
   
             <label for="c++">C++
-              <input id="c++" type="radio" name="strongest-lang" value="c++"/>
+              <input id="c++" type="radio" name="strongest-lang" value="C++"/>
             </label>
   
             <label for="c">C
-              <input id="c" type="radio" name="strongest-lang" value="c"/>
+              <input id="c" type="radio" name="strongest-lang" value="C"/>
             </label>
   
             <label for="sql">SQL
-              <input id="sql" type="radio" name="strongest-lang" value="sql"/>
+              <input id="sql" type="radio" name="strongest-lang" value="SQL"/>
             </label>
           </fieldset>
   
           <fieldset>
             <legend>Please identify the strengths of the portfolio by selecting the applicable areas:</legend>
             <label for="front-end">
-              <input id="front-end" type="checkbox" value="front-end" name="strengths"/> Front-End Development
+              <input id="front-end" type="checkbox" value="Front-End Development" name="strengths"/> Front-End Development
             </label>
   
             <label for="back-end">
-              <input id="back-end" type="checkbox" value="back-end" name="strengths"/> Back-End Development
+              <input id="back-end" type="checkbox" value="Back-End Development" name="strengths"/> Back-End Development
             </label>
   
             <label for="ui/ux">
-              <input id="ui/ux" type="checkbox" value="ui/ux" name="strengths"/> UI/UX Design
+              <input id="ui/ux" type="checkbox" value="UI/UX Design" name="strengths"/> UI/UX Design
             </label>
   
             <label for="organization">
-              <input id="organization" type="checkbox" value="organization" name="strengths"/> Code Organization and Readability
+              <input id="organization" type="checkbox" value="Code Organization and Readability" name="strengths"/> Code Organization and Readability
             </label>
   
             <label for="documentation">
-              <input id="documentation" type="checkbox" value="documentation" name="strengths"/> Project Documentation
+              <input id="documentation" type="checkbox" value="Project Documentation" name="strengths"/> Project Documentation
             </label>
   
             <label for="problem-solving">
-              <input id="problem-solving" type="checkbox" value="problem-solving" name="strengths"/> Problem Solving
+              <input id="problem-solving" type="checkbox" value="Problem Solving" name="strengths"/> Problem Solving
             </label>
   
             <label for="testing">
-              <input id="testing" type="checkbox" value="testing" name="strengths"/> Testing and Quality Assurance
+              <input id="testing" type="checkbox" value="Testing and Quality Assurance" name="strengths"/> Testing and Quality Assurance
             </label>
           </fieldset>
 
