capitalized 'S' in JavaScript in HTML document.

--- a/Website/survey/templates/survey.html
+++ b/Website/survey/templates/survey.html
@@ -45,7 +45,7 @@
           <fieldset>
             <legend>Which language do you believe I demonstrate the strongest proficiency in within my GitHub projects?</legend>
             <label for="javascript">JavaScript
-              <input id="javascript" type="radio" name="strongest-lang" value="Javascript" checked/>
+              <input id="javascript" type="radio" name="strongest-lang" value="JavaScript" checked/>
             </label>
   
             <label for="python">Python
