--- a/Website/survey/templates/survey.html
+++ b/Website/survey/templates/survey.html
@@ -45,58 +45,58 @@
           <fieldset>
             <legend>Which language do you believe I demonstrate the strongest proficiency in within my GitHub projects?</legend>
             <label for="javascript">JavaScript
-              <input id="javascript" type="radio" name="strongest-lang" value="JavaScript" checked/>
+              <input id="javascript" type="radio" name="strongest-lang" value="JavaScript" class="nudgeUp" checked/>
             </label>
   
             <label for="python">Python
-              <input id="python" type="radio" name="strongest-lang" value="Python"/>
+              <input id="python" type="radio" name="strongest-lang" value="Python" class="nudgeUp"/>
             </label>
   
             <label for="java">Java
-              <input id="java" type="radio" name="strongest-lang" value="Java"/>
+              <input id="java" type="radio" name="strongest-lang" value="Java" class="nudgeUp"/>
             </label>
   
             <label for="c++">C++
-              <input id="c++" type="radio" name="strongest-lang" value="C++"/>
+              <input id="c++" type="radio" name="strongest-lang" value="C++" class="nudgeUp"/>
             </label>
   
             <label for="c">C
-              <input id="c" type="radio" name="strongest-lang" value="C"/>
+              <input id="c" type="radio" name="strongest-lang" value="C" class="nudgeUp"/>
             </label>
   
             <label for="sql">SQL
-              <input id="sql" type="radio" name="strongest-lang" value="SQL"/>
+              <input id="sql" type="radio" name="strongest-lang" value="SQL" class="nudgeUp"/>
             </label>
           </fieldset>
   
           <fieldset>
             <legend>Please identify the strengths of the portfolio by selecting the applicable areas:</legend>
             <label for="front-end">
-              <input id="front-end" type="checkbox" value="Front-End Development" name="strengths"/> Front-End Development
+              <input id="front-end" type="checkbox" value="Front-End Development" name="strengths" class="nudgeDown"/> Front-End Development
             </label>
   
             <label for="back-end">
-              <input id="back-end" type="checkbox" value="Back-End Development" name="strengths"/> Back-End Development
+              <input id="back-end" type="checkbox" value="Back-End Development" name="strengths" class="nudgeDown"/> Back-End Development
             </label>
   
             <label for="ui/ux">
-              <input id="ui/ux" type="checkbox" value="UI/UX Design" name="strengths"/> UI/UX Design
+              <input id="ui/ux" type="checkbox" value="UI/UX Design" name="strengths" class="nudgeDown"/> UI/UX Design
             </label>
   
             <label for="organization">
-              <input id="organization" type="checkbox" value="Code Organization and Readability" name="strengths"/> Code Organization and Readability
+              <input id="organization" type="checkbox" value="Code Organization and Readability" name="strengths" class="nudgeDown"/> Code Organization and Readability
             </label>
   
             <label for="documentation">
-              <input id="documentation" type="checkbox" value="Project Documentation" name="strengths"/> Project Documentation
+              <input id="documentation" type="checkbox" value="Project Documentation" name="strengths" class="nudgeDown"/> Project Documentation
             </label>
   
             <label for="problem-solving">
-              <input id="problem-solving" type="checkbox" value="Problem Solving" name="strengths"/> Problem Solving
+              <input id="problem-solving" type="checkbox" value="Problem Solving" name="strengths" class="nudgeDown"/> Problem Solving
             </label>
   
             <label for="testing">
-              <input id="testing" type="checkbox" value="Testing and Quality Assurance" name="strengths"/> Testing and Quality Assurance
+              <input id="testing" type="checkbox" value="Testing and Quality Assurance" name="strengths" class="nudgeDown"/> Testing and Quality Assurance
             </label>
           </fieldset>
 
