--- a/Website/survey/static/styles.css
+++ b/Website/survey/static/styles.css
@@ -1,3 +1,4 @@
+/* Resetting default styles and setting a background color */
 body {
     font-family: 'Arial', sans-serif;
     margin: 0;
@@ -5,6 +6,7 @@ body {
     background-color: #f7f7f7;
   }
   
+  /* Styling for the header section */
   header {
     background-color: #333;
     color: #fff;
@@ -12,6 +14,7 @@ body {
     padding: 1rem 0;
   }
   
+  /* Styling for the main content section */
   main {
     max-width: 800px;
     margin: 0 auto;
@@ -20,11 +23,13 @@ body {
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
   }
   
+  /* Styling for the survey form */
   #survey-form {
     display: grid;
     gap: 15px;
   }
   
+  /* Common styling for labels, inputs, select, and textarea */
   label {
     display: block;
     margin-bottom: 5px;
@@ -41,9 +46,10 @@ body {
   }
   
   textarea {
-    height: 150px; /* Adjust the height as needed */
+    height: 150px; 
   }
   
+  /* Styling for fieldset and legend elements */
   fieldset {
     margin-bottom: 15px;
   }
@@ -52,6 +58,7 @@ body {
     font-weight: bold;
   }
   
+  /* Styling for checkboxes and radio buttons, and submit button */
   checkbox,
   radio {
     margin-right: 5px;
@@ -70,6 +77,7 @@ body {
     background-color: #45a049;
   }
 
+  /* Styling for vertically aligning the checkboxes and radio buttons */
   .nudgeUp {
     transform: translateY(-1rem);
   }
