--- a/Website/survey/templates/survey.html
+++ b/Website/survey/templates/survey.html
@@ -4,21 +4,28 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>GitHub Portfolio Feedback Survey</title>
+
+    <!-- Loading static CSS file -->
     {% load static %}
     <link rel="stylesheet" href="{% static 'styles.css' %}" />
   </head>
 
   <body>
+    <!-- Header section -->
     <header>
         <h1 id="title">GitHub Portfolio Feedback Survey</h1>
-    </header>
+    </header> 
 
+    <!-- Main content section -->
     <main>
+      <!-- Survey description -->
       <p id="description">Share your insights to help enhance my GitHub portfolio – your feedback on language proficiency, areas for improvement, and overall quality is invaluable!</p>
 
+      <!-- Survey form -->
       <form id="survey-form" method="post" action="{% url 'survey' %}">
         {% csrf_token %}
         
+        <!-- Input fields for name, email, age, and dropdown -->
         <label id="name-label" for="name">Full Name
           <input id="name" type="text" name="name" placeholder="John Doe" required/>
         </label>
@@ -99,11 +106,13 @@
               <input id="testing" type="checkbox" value="Testing and Quality Assurance" name="strengths" class="nudgeDown"/> Testing and Quality Assurance
             </label>
           </fieldset>
-
+        
+        <!-- Text area for additional comments -->
         <label for="textbox">In your opinion, what specific improvements or additions could enhance the overall quality and effectiveness of my GitHub portfolio? Please share any suggestions or insights you may have.
           <textarea id="textbox" name="textbox" maxlength="500"></textarea>
         </label>
 
+        <!-- Submit button -->
         <input id="submit" type="submit" value="Submit" />
       </form>
     </main>
